Fixed alignment of weekly topics component. Adjusted calendar CSS.

--- a/bootcamp-calendar/src/Components/Calendar/calendar.css
+++ b/bootcamp-calendar/src/Components/Calendar/calendar.css
@@ -11,7 +11,7 @@
 }
 .fc-view-harness
 {
-    height: 600px!important;
+    height: 575px!important;
     margin: 20px;
 }
 
