--- a/bootcamp-calendar/src/Components/WeeklyTopicBar/weeklytopicbar.css
+++ b/bootcamp-calendar/src/Components/WeeklyTopicBar/weeklytopicbar.css
@@ -1,17 +1,20 @@
 .weeklyTopicBar-container
 {
-    margin: 0 30px 0 30px;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 0 7px 0;
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: #D9D9D980;
     border-radius: 10px;
-    margin: 5px;
+    padding: 0 300px 0 300px;
 }
 
 h1
 {
     font-size: 1.25em;
+    margin-bottom: 0;
 }
 
 .weeklyTopicBar-heading
