--- a/bootcamp-calendar/src/index.css
+++ b/bootcamp-calendar/src/index.css
@@ -10,8 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
   
-  background-image: url("../src/Assets/Img_1.jpg")
-  
+  background-image: url("../src/Assets/Img_1.jpg");
   
 }
 
@@ -19,7 +18,6 @@ code {
   /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace; */
 }
-
 
 .fc
 {
